<resources>
    <string name="app_name">EducApp</string>

    <string name="facebook_app_id">1414862541923055</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cursos">EducApp</string>

    <string name="btn_inicio">Iniciar Sesión</string>
    <string name="btn_registrar">Registrarse</string>
    <string name="login_usuario">Usuario</string>
    <string name="login_contraseña">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="cancel_login">login cancelado</string>
    <string name="error_login">error en login</string>

    <string name="curso_mate">Matemáticas 1</string>

    <string name="inicio">Inicio</string>
    <string name="perfil">Mi Perfil</string>
    <string name="cerrar">Cerrar Sesión</string>

    <string name="nombre">Nombre Completo</string>
    <string name="colegio">Colegio o Institución</string>
    <string name="ciudad">Ciudad</string>
    <string name="mail">Mail</string>
    <string name="edad">Edad</string>
    <string name="facebook">IdFacebook</string>

    <string name="guardar">Guardar</string>
    <string name="cargar">Cargar</string>
    <string name="actualizar">Actualizar</string>
    <string name="salir">Salir</string>

    <string name="mate">Matemáticas 1</string>
    <string name="texto1">El objetivo inicial de esta asignatura es conseguir que los estudiantes de primer curso se hagan con los procedimientos prácticos básicos, que permiten la adaptación del estudio de las Matemáticas, en la Universidad.</string>
    <string name="siguiente">Siguiente</string>


    <string name="texto2">Las fracciones, en su significado más simple, nos indican el número de partes que tomamos de un “todo” al que llamamos unidad. Al número de partes que tomamos lo llamamos numerador y al número de partes iguales en que dividimos la unidad, denominador.</string>

    <string name="felicidades">Felicidades</string>
    <string name="texto">Has terminado el curso de Matemáticas 1.</string>
    <string name="terminaste">Terminaste</string>

    <!--<string name="check">Comprueba</string>
    <string name="question">Pregunta</string>
    <string name="question_content">Cual es el mínimo común múltiplo de 1/3 - 1/4 + 8/5 - 2/9 ?</string>
    <string name="correct">Muy bien!</string>
    <string name="incorrect">Incorrecto...</string>

    <array name="answers">
        <item>120 - ciento veinte</item>
        <item>30 - treinta</item>
        <item>180 - ciento ochenta</item>
    </array>

    <integer name="correct_answer">2</integer>-->

    <string name="question">Question</string>
    <string name="check">Check</string>
    <string name="correct">Muy Bien!</string>
    <string name="incorrect">Incorrecto...</string>
    <string name="next">Siguiente</string>
    <string name="finish">Terminar</string>
    <string name="prev">Anterior</string>
    <string name="results">Resultados</string>
    <string name="start_over">Empezar de Nuevo</string>

    <string name="algebra_lineal">Álgebra Lineal</string>
    <string name="estadistica">Estadística</string>
    <string name="calculo">Cálculo</string>

    <array name="all_questions">
        <item>Cual es el mínimo común múltiplo de 1/3 - 1/4 + 8/5 - 2/9 ?;120 - ciento veinte;30 -
            treinta;*180 - ciento ochenta
        </item>
        <item>Cual es el resultado de 2 - 3/4 ?;*5/4;-5/4;3/4</item>
        <item>Cual es el resultado final de la operación 1/3 - 1/4 + 8/5 - 2/9
            ?;63/180;*263/180;263/120
        </item>

    </array>

</resources>
