<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="app.proyecto.crianbra.proyecto_moviles.Matematica2Activity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/regalo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/txt_felicidades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/felicidades"
            android:textColor="@color/colorPrimary"
            android:textSize="?attr/actionBarSize"
            android:layout_below="@+id/imageView4"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/txt_texto_felicidades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_felicidades_matematicas"
            android:layout_alignStart="@+id/btn_felicidades_matematicas"
            android:layout_below="@+id/txt_felicidades"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/texto"
            android:textColor="@color/colorPrimary"
            android:textSize="?attr/dialogPreferredPadding" />

        <Button
            android:id="@+id/btn_felicidades_matematicas"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignTop="@+id/txt_texto_felicidades"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="106dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/terminaste"
            android:textColor="@android:color/background_light"
            android:textSize="?attr/dialogPreferredPadding" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
