<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="com.example.crianbra.proyecto_moviles.LoginActivity">


    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:srcCompat="@mipmap/logo"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/text_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_usuario"
            android:textColor="@color/colorPrimary"
            android:textSize="?attr/dialogPreferredPadding"
            android:layout_below="@+id/imageView2"
            android:layout_alignLeft="@+id/txt_pass"
            android:layout_alignStart="@+id/txt_pass" />

        <EditText
            android:id="@+id/user"
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/txt_pass"
            android:layout_alignStart="@+id/txt_pass"
            android:layout_below="@+id/text_user"
            android:layout_marginTop="8dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txt_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pass"
            android:layout_alignLeft="@+id/pass"
            android:layout_alignStart="@+id/pass"
            android:layout_marginBottom="8dp"
            android:text="@string/login_contraseña"
            android:textColor="@color/colorPrimary"
            android:textSize="?attr/dialogPreferredPadding" />


        <EditText
            android:id="@+id/pass"
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:layout_above="@+id/btn_ingreso"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="26dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_ingreso"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:text="@string/btn_ingresar"
            android:textColor="@android:color/background_light"
            android:textSize="?attr/dialogPreferredPadding" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
